fix(Editor) improves www icon size on mobile

--- a/src/styles/bulma/fixes.sass
+++ b/src/styles/bulma/fixes.sass
@@ -3,6 +3,9 @@
 
 .is-size-8
 	font-size: $size-8 !important
+.is-size-8-touch
+	+touch
+		font-size: $size-8 !important
 .is-size-9
 	font-size: $size-9 !important
 
